update language enum to add more languages
