# src/main/webapp/swagger.json
@@ -45,6 +45,15 @@
         "description" : "",
         "operationId" : "createBook",
         "consumes" : [ "application/json" ],
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "description" : "Book to be created",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/definitions/Book"
+          }
+        } ],
         "responses" : {
           "201" : {
             "description" : "The book is created"
@@ -153,9 +162,12 @@
           "minLength" : 1,
           "maxLength" : 200
         },
+        "imageUrl" : {
+          "type" : "string"
+        },
         "language" : {
           "type" : "string",
-          "enum" : [ "ENGLISH", "FRENCH", "ARABIC", "GERMAN", "SPANSIH", "ITALIAN", "RUSSIAN" ]
+          "enum" : [ "ENGLISH", "FRENCH", "SPANSISH", "PORTUGUESE", "ITALIAN", "FINISH", "GERMAN", "DEUTCH", "RUSSIAN" ]
         },
         "unitCost" : {
           "type" : "number",
@@ -175,9 +187,6 @@
           "description" : "Description of the book",
           "minLength" : 1,
           "maxLength" : 10000
-        },
-        "imageUrl" : {
-          "type" : "string"
         }
       },
       "description" : "Book resource representation"
